addded finishing styles to css file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <!-- main card component -->
      <section class="main">
         <!-- image section -->
-        <div class="image">
-            <img src="img/image-product-desktop.jpg" alt="a perfume bottle">
-        </div>
+            <img class="image" src="img/image-product-desktop.jpg" alt="a perfume bottle">
         <!-- info section -->
         <div class="info">
             <h4>PERFUME</h4>
