restyled css to be mobile-first

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- main card component -->
      <section class="main">
         <!-- image section -->
-            <img class="image" src="img/image-product-desktop.jpg" alt="a perfume bottle">
+            <img class="desktop" src="img/image-product-desktop.jpg" alt="a perfume bottle">
+            <img class="mobile" src="img/image-product-mobile.jpg" alt="a perfume bottle">
         <!-- info section -->
         <div class="info">
             <h4>PERFUME</h4>
